--- a/Back/package.json
+++ b/Back/package.json
@@ -18,7 +18,7 @@
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "jest": "29.7.0",
-    "jsonwebtoken": "9.0.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "1.10.0",
     "nodemon": "3.1.0",
     "pg": "8.11.5",
