--- a/Back/package.json
+++ b/Back/package.json
@@ -17,15 +17,16 @@
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
-    "jest": "29.7.0",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
     "nodemon": "3.1.0",
     "pg": "8.11.5",
     "pg-hstore": "2.3.4",
-    "sequelize": "6.37.3"
+    "sequelize": "6.37.3",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "eslint": "6.8.0"
+    "eslint": "6.8.0",
+    "jest": "29.7.0"
   }
 }
