--- a/Back/package.json
+++ b/Back/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "jest",
+	"test:file": "jest --testPathPattern=__tests__/$1.test.js",
     "lint": "eslint . --fix"
   },
   "keywords": [],
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "6.8.0",
-    "jest": "29.7.0"
+    "jest": "29.7.0",
+    "supertest": "7.0.0"
   }
 }
