--- a/Front/package.json
+++ b/Front/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "./pre-start.sh && next dev",
+    "dev": "node pre-start.js && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,6 +15,7 @@
     "tailwindcss-animated": "1.1.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "8",
     "eslint-config-next": "14.2.4",
     "postcss": "8",
