--- a/Back/package.json
+++ b/Back/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "jest",
-	"test:file": "jest --testPathPattern=__tests__/$1.test.js",
+    "test:file": "jest --testPathPattern=__tests__/$1.test.js",
     "lint": "eslint . --fix"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "faker": "^6.6.6",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
     "nodemon": "3.1.0",
@@ -27,6 +28,7 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "9.1.0",
     "eslint": "6.8.0",
     "jest": "29.7.0",
     "supertest": "7.0.0"
