--- a/Front/package.json
+++ b/Front/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "2.2.6",
     "axios": "1.7.2",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
+    "prop-types": "^15.8.1",
     "react": "18",
     "react-dom": "18",
     "react-redux": "9.1.2",
