--- a/Front/package.json
+++ b/Front/package.json
@@ -6,7 +6,8 @@
     "dev": "node pre-start.js && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "electron": "electron main.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -15,6 +16,7 @@
     "@mui/material": "^5.16.4",
     "@reduxjs/toolkit": "2.2.6",
     "axios": "1.7.2",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "prop-types": "^15.8.1",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "cross-env": "7.0.3",
+    "electron": "^33.2.1",
     "eslint": "8",
     "eslint-config-next": "14.2.4",
     "postcss": "8",
