--- a/Front/package.json
+++ b/Front/package.json
@@ -17,6 +17,8 @@
     "@reduxjs/toolkit": "2.2.6",
     "axios": "1.7.2",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "prop-types": "^15.8.1",
